--- a/DAY01_0408/hw.ipynb
+++ b/DAY01_0408/hw.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,14 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ WARN:0@24.915] global loadsave.cpp:248 findDecoder imread_('../../Data/albumart/3824.jpg'): can't open/read file: check file path/integrity\n"
+      "[ WARN:0@0.027] global loadsave.cpp:248 findDecoder imread_('../../Data/albumart/3824.jpg'): can't open/read file: check file path/integrity\n"
      ]
     }
    ],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "           )"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        "  ('../../Data/albumart/1990/17282.jpg', 0)])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        " 0)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "84"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "(59, 9, 16)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,33 +448,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/20], Train Loss: 1.1130, Train Accuracy: 0.4413, Valid Loss: 1.1664, Valid Accuracy: 0.2222\n",
-      "Epoch [2/20], Train Loss: 0.9516, Train Accuracy: 0.4952, Valid Loss: 0.9404, Valid Accuracy: 0.5556\n",
-      "Epoch [3/20], Train Loss: 0.8924, Train Accuracy: 0.4921, Valid Loss: 0.9572, Valid Accuracy: 0.6667\n",
-      "Epoch [4/20], Train Loss: 0.8094, Train Accuracy: 0.6381, Valid Loss: 0.9512, Valid Accuracy: 0.4444\n",
-      "Epoch [5/20], Train Loss: 0.7108, Train Accuracy: 0.6698, Valid Loss: 0.8629, Valid Accuracy: 0.5556\n",
-      "Epoch [6/20], Train Loss: 0.5883, Train Accuracy: 0.7810, Valid Loss: 0.8741, Valid Accuracy: 0.5556\n",
-      "Epoch [7/20], Train Loss: 0.4874, Train Accuracy: 0.8413, Valid Loss: 0.8103, Valid Accuracy: 0.5556\n",
-      "Epoch [8/20], Train Loss: 0.3710, Train Accuracy: 0.8889, Valid Loss: 0.7871, Valid Accuracy: 0.5556\n",
-      "Epoch [9/20], Train Loss: 0.2962, Train Accuracy: 0.9206, Valid Loss: 0.8792, Valid Accuracy: 0.5556\n",
-      "Epoch [10/20], Train Loss: 0.2086, Train Accuracy: 0.9524, Valid Loss: 1.0250, Valid Accuracy: 0.5556\n",
-      "Epoch [11/20], Train Loss: 0.1864, Train Accuracy: 0.9524, Valid Loss: 1.1928, Valid Accuracy: 0.4444\n",
-      "Epoch [12/20], Train Loss: 0.1162, Train Accuracy: 0.9841, Valid Loss: 1.2756, Valid Accuracy: 0.4444\n",
-      "Epoch [13/20], Train Loss: 0.1045, Train Accuracy: 0.9841, Valid Loss: 1.4831, Valid Accuracy: 0.4444\n",
-      "Epoch [14/20], Train Loss: 0.0673, Train Accuracy: 0.9841, Valid Loss: 1.4692, Valid Accuracy: 0.4444\n",
-      "Epoch [15/20], Train Loss: 0.0642, Train Accuracy: 1.0000, Valid Loss: 2.0523, Valid Accuracy: 0.3333\n",
-      "Epoch [16/20], Train Loss: 0.0423, Train Accuracy: 1.0000, Valid Loss: 1.7844, Valid Accuracy: 0.4444\n",
-      "Epoch [17/20], Train Loss: 0.0203, Train Accuracy: 1.0000, Valid Loss: 2.1704, Valid Accuracy: 0.4444\n",
-      "Epoch [18/20], Train Loss: 0.0203, Train Accuracy: 1.0000, Valid Loss: 1.8709, Valid Accuracy: 0.4444\n",
-      "Epoch [19/20], Train Loss: 0.0123, Train Accuracy: 1.0000, Valid Loss: 2.3612, Valid Accuracy: 0.4444\n",
-      "Epoch [20/20], Train Loss: 0.0099, Train Accuracy: 1.0000, Valid Loss: 2.2360, Valid Accuracy: 0.4444\n"
+      "Epoch [1/20], Train Loss: 1.1049, Train Accuracy: 0.4571, Valid Loss: 1.1257, Valid Accuracy: 0.2222\n",
+      "Epoch [2/20], Train Loss: 0.9774, Train Accuracy: 0.4635, Valid Loss: 0.9755, Valid Accuracy: 0.5556\n",
+      "Epoch [3/20], Train Loss: 0.9058, Train Accuracy: 0.5111, Valid Loss: 1.0177, Valid Accuracy: 0.4444\n",
+      "Epoch [4/20], Train Loss: 0.8304, Train Accuracy: 0.6571, Valid Loss: 1.0024, Valid Accuracy: 0.2222\n",
+      "Epoch [5/20], Train Loss: 0.7370, Train Accuracy: 0.6698, Valid Loss: 0.9056, Valid Accuracy: 0.5556\n",
+      "Epoch [6/20], Train Loss: 0.6227, Train Accuracy: 0.7016, Valid Loss: 0.8840, Valid Accuracy: 0.5556\n",
+      "Epoch [7/20], Train Loss: 0.5239, Train Accuracy: 0.7778, Valid Loss: 0.8142, Valid Accuracy: 0.5556\n",
+      "Epoch [8/20], Train Loss: 0.4082, Train Accuracy: 0.8571, Valid Loss: 0.7535, Valid Accuracy: 0.5556\n",
+      "Epoch [9/20], Train Loss: 0.3198, Train Accuracy: 0.9048, Valid Loss: 0.7861, Valid Accuracy: 0.6667\n",
+      "Epoch [10/20], Train Loss: 0.2316, Train Accuracy: 0.9365, Valid Loss: 0.8051, Valid Accuracy: 0.6667\n",
+      "Epoch [11/20], Train Loss: 0.1837, Train Accuracy: 0.9206, Valid Loss: 0.8390, Valid Accuracy: 0.6667\n",
+      "Epoch [12/20], Train Loss: 0.1236, Train Accuracy: 0.9683, Valid Loss: 0.8315, Valid Accuracy: 0.6667\n",
+      "Epoch [13/20], Train Loss: 0.1172, Train Accuracy: 0.9683, Valid Loss: 1.0368, Valid Accuracy: 0.5556\n",
+      "Epoch [14/20], Train Loss: 0.0765, Train Accuracy: 0.9841, Valid Loss: 1.2348, Valid Accuracy: 0.4444\n",
+      "Epoch [15/20], Train Loss: 0.0715, Train Accuracy: 1.0000, Valid Loss: 1.0244, Valid Accuracy: 0.5556\n",
+      "Epoch [16/20], Train Loss: 0.0464, Train Accuracy: 0.9841, Valid Loss: 1.1147, Valid Accuracy: 0.5556\n",
+      "Epoch [17/20], Train Loss: 0.0334, Train Accuracy: 1.0000, Valid Loss: 1.4049, Valid Accuracy: 0.5556\n",
+      "Epoch [18/20], Train Loss: 0.0224, Train Accuracy: 1.0000, Valid Loss: 1.3121, Valid Accuracy: 0.5556\n",
+      "Epoch [19/20], Train Loss: 0.0168, Train Accuracy: 1.0000, Valid Loss: 1.3944, Valid Accuracy: 0.5556\n",
+      "Epoch [20/20], Train Loss: 0.0114, Train Accuracy: 1.0000, Valid Loss: 1.6754, Valid Accuracy: 0.4444\n"
      ]
     }
    ],
@@ -496,6 +496,8 @@
     "        train_loss += loss.item()\n",
     "        _, predicted = torch.max(outputs.data, 1)\n",
     "        train_accuracy += (predicted == labels).sum().item() / labels.size(0)\n",
+    "        torch.save(model.state_dict(), 'albumart_model.pth')  # Add this line after training \n",
+    "\n",
     "\n",
     "    model.eval()\n",
     "    valid_loss = 0.0\n",
@@ -516,14 +518,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 1.9195, Test Accuracy: 0.3651\n"
+      "Test Loss: 2.7859, Test Accuracy: 0.4365\n"
      ]
     }
    ],
